Fix shorten button moving around on small screens when changing to copy button

--- a/website/style.css
+++ b/website/style.css
@@ -53,7 +53,7 @@ body {
     text-decoration-color: initial;
     vertical-align: bottom;
     margin-bottom: 0;
-    min-width: 20%;
+    min-width: 90px;
     position: relative;
     top: -2px;
     background-image: initial;
